# floem-app-template

./: Cargo.toml  LICENSE  build.rs
src/: app_icon.rs  app_view.rs  main.rs  utils.rs  widgets.rs
