[package]
name = "floem-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floem = {git = "https://github.com/lapce/floem.git", rev = "e0e2d510922d2e077dd421d643f7e7c966059b0b"}
winapi = {version = "0.3.9", features = ["processthreadsapi", "winuser"]}

[package.metadata.winres]
LegalCopyright = "Copyright © 2016-2024"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = { git = "https://github.com/njust/winres.git" }

[build-dependencies]
embed-manifest = "1.3.1"

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
